# DEngine

./: .gitignore  .gitmodules  .sync-exclude.lst  BUILD.md  CMakeLists.txt  CMakeSettings.json  CleanWorkfiles.sh  Common.cmake  DEngine.kdev4  README.md  To-do List.txt  imgui.ini
.kdev4/: DEngine.kdev4
Android/: settings.gradle
Android/app/: build.gradle
Android/app/src/main/cpp/: CMakeLists.txt
Data/Textures/: defaultTexture.psd  test.ktx.REMOVED.git-id  test2.KTX  test3.ktx.REMOVED.git-id
all/src/: main.cpp
android/: README.md  build.gradle  gradle.properties
android/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
android/app/src/: BackendData.hpp  FileInputStream.cpp  HandleCustomEvent.cpp  HandleCustomEvent.hpp  HandleInputEvent.cpp  HandleInputEvent.hpp  application.cpp  application2.cpp
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/data/: Test.ktx  frag.spv
android/app/src/main/java/didgy/dengine/: BeginInputSessionInfo.kt  DEngineActivity.java  DEngineActivity.kt  DEngineActivity2.kt  DEngineApp.kt  MainActivity.java  NativeInputConnection.java  NativeInputConnection.kt  NativeInputFilter.java  NativeInputFilter.kt  NativeInterface.java  NativeView.java  NativeView.kt
android/app/src/main/java/didgy/dengine/editor/: DEngineActivity.java
android/app/src/main/res/values/: strings.xml
any/: CMakeLists.txt  Doxyfile  LinkDependencies.cmake  SetupAssertDefines.cmake  SourceFileList.cmake  SourceFileList.txt
any/include/DEngine/: Application.hpp  FixedWidthTypes.hpp  Physics.hpp  Scene.hpp  Time.hpp
any/include/DEngine/Editor/: Joystick.hpp
any/include/DEngine/Gfx/: Gfx.hpp
any/include/DEngine/Gfx/detail/: Assert.hpp
any/include/DEngine/Gfx/impl/: Assert.hpp
any/include/DEngine/Gui/: AllocRef.hpp  AnchorArea.hpp  Button.hpp  ButtonGroup.hpp  ButtonSizeBehavior.hpp  CollapsingHeader.hpp  Context.hpp  DockArea.hpp  DrawInfo.hpp  Dropdown.hpp  Events.hpp  Grid.hpp  Gui.hpp  Image.hpp  Layer.hpp  LineEdit.hpp  LineFloatEdit.hpp  LineIntEdit.hpp  LineList.hpp  Menu.hpp  MenuBar.hpp  MenuButton.hpp  RectCollection.hpp  ScrollArea.hpp  SizeHint.hpp  SizeHintCollection.hpp  StackLayout.hpp  Text.hpp  TextManager.hpp  Utility.hpp  Widget.hpp  WindowHandler.hpp  WindowID.hpp
any/include/DEngine/Gui/impl/: Assert.hpp
any/include/DEngine/Math/: Common.hpp  LinearTransform2D.hpp  LinearTransform3D.hpp  Math.hpp  Matrix.hpp  Trigonometric.hpp  UnitQuaternion.hpp  Vector.hpp
any/include/DEngine/Math/detail/: MatrixBase.hpp  MatrixBaseSquare.hpp  Vector2_f32.hpp  Vector2_f32_Impl.hpp  Vector2_i32.hpp  Vector2_i32_Impl.hpp  Vector2_u32.hpp  Vector3_f32.hpp  Vector3_f32_Impl.hpp  Vector4_f32.hpp  Vector4_f32_Impl.hpp
any/include/DEngine/Math/impl/: Assert.hpp  Matrix.natvis  MatrixBaseSquare.hpp  Vector2_f32.hpp  Vector2_f32_Impl.hpp  Vector2_i32.hpp  Vector2_i32_Impl.hpp  Vector3_f32.hpp  Vector3_f32_Impl.hpp  Vector4_f32.hpp  Vector4_f32_Impl.hpp  VectorND.hpp
any/include/DEngine/Std/: Allocator.hpp  BumpAllocator.hpp  Defines.hpp  FrameAllocator.hpp  Limits.hpp  Trait.hpp  Utility.hpp
any/include/DEngine/Std/Containers/: AllocRef.hpp  AnyRef.hpp  Array.hpp  Box.hpp  Defer.hpp  Fn.hpp  FnRef.hpp  FnScratchList.hpp  FnVec.hpp  Opt.hpp  Pair.hpp  Range.hpp  RangeFnRef.hpp  Span.hpp  Span.natvis  StackString.hpp  StackVec.hpp  Str.hpp  Variant.hpp  Vec.hpp  Vec.natvis  WeakPtr.hpp
any/include/DEngine/Std/Containers/impl/: Assert.hpp
any/include/DEngine/detail/: Application.hpp  Assert.hpp
any/include/DEngine/impl/: AppAssert.hpp  Application.hpp  Assert.hpp  InnerAssert.hpp
any/src/: GfxGuiEventForwarder.hpp  main.cpp  main2.cpp  main_GuiPlayground.cpp
any/src/DEngine/: Assert.cpp  Physics2D.cpp  Scene.cpp  Time.cpp  Utility.cpp
any/src/DEngine/Application/: Application.cpp
any/src/DEngine/Editor/: AppIntegration.cpp  ComponentWidgets.cpp  ComponentWidgets.hpp  Editor.cpp  Editor.hpp  EditorImpl.hpp  Joystick.cpp  ViewportWidget.cpp  ViewportWidget.hpp
any/src/DEngine/Gfx/: APIDataBase.hpp  Gfx.cpp
any/src/DEngine/Gfx/Vk/: Constants.hpp  DeletionQueue.cpp  DeletionQueue.hpp  Draw.cpp  Draw_Gui.cpp  Draw_Gui.hpp  DynamicDispatch.cpp  DynamicDispatch.hpp  ForwardDeclarations.hpp  GizmoManager.cpp  GizmoManager.hpp  GlobUtils.hpp  GuiResourceManager.cpp  GuiResourceManager.hpp  Init.cpp  Init.hpp  NativeWindowManager.cpp  NativeWindowManager.hpp  ObjectDataManager.cpp  ObjectDataManager.hpp  PhysDeviceInfo.hpp  QueueData.cpp  QueueData.hpp  RaiiHandles.hpp  StagingBufferAlloc.cpp  StagingBufferAlloc.hpp  SurfaceInfo.hpp  TextureManager.cpp  TextureManager.hpp  TransientAllocRef.hpp  VMAIncluder.hpp  ViewportManager.cpp  ViewportManager.hpp  Vk.cpp  Vk.hpp  VulkanIncluder.hpp  vk_mem_alloc.cpp
any/src/DEngine/Gui/: AnchorArea.cpp  Button.cpp  ButtonGroup.cpp  ButtonSizeBehavior.cpp  CollapsingHeader.cpp  Context.cpp  DockArea.cpp  Dropdown.cpp  Grid.cpp  Image.cpp  ImplData.hpp  LineEdit.cpp  LineFloatEdit.cpp  LineIntEdit.cpp  LineList.cpp  Menu.cpp  MenuBar.cpp  MenuButton.cpp  ScrollArea.cpp  StackLayout.cpp  Text.cpp  TextManager.cpp
any/src/DEngine/Gui/DockArea/: DockArea.cpp  Impl.hpp  Iterators.inl  Iterators_Impl.inl  PointerBehavior.cpp  Utilities.cpp
any/src/DEngine/Math/: Common.cpp  LinearTransform3D.cpp  Vector.cpp
any/src/DEngine/Std/: Allocator.cpp  BumpAllocator.cpp  FrameAllocator.cpp  Std.cpp  Utility.cpp
cmake/: SetCompilerSettings.cmake  SetDEngineDefines.cmake
data/: Test.frag  Test.vert  vert.spv
data/Sponza/: 1219024358953944284.KTX.REMOVED.git-id  1219024358953944284.png.REMOVED.git-id  2185409758123873465.ktx.REMOVED.git-id  2185409758123873465.png.REMOVED.git-id  (+62 more)
data/data/: Test.frag  (+3 more)
desktop/: CMakeLists.txt
desktop/src/: Application.cpp  application.cpp
desktop/windows/: Accessibility.cpp  Application.cpp  BackendData.hpp  InitGuid.cpp  win32_vk.cpp
include/: InputRotate.hpp  SinusMovement.hpp  stuff.hpp
refresh_assets/: main.cpp
src/: CMakeLists.txt  InputRotate.cpp  SinusMovement.cpp  main.cpp  stuff.cpp
x/: build.gradle  local.properties
(+491 files in other folders)
